test/e2e/features/agentgateway/aibackend/testdata/setup.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ai-gateway
spec:
  gatewayClassName: agentgateway
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: http
    port: 8080
    protocol: HTTP
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: openai
spec:
  ai:
    provider:
      openai:
        model: gpt-4o-mini
      host: 172.17.0.1
      port: 9234
  policies:
    auth:
      key: openai-key
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: anthropic
spec:
  ai:
    provider:
      anthropic:
        model: claude-sonnet-4@20250514
      host: 172.17.0.1
      port: 9234
  policies:
    auth:
      key: anthropic-key
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ai-gateway
  rules:
  - name: openai
    backendRefs:
    - group: gateway.kgateway.dev
      kind: AgentgatewayBackend
      name: openai
    matches:
    - path:
        type: PathPrefix
        value: /v1/chat/completions
  - name: anthropic-0
    backendRefs:
    - group: gateway.kgateway.dev
      kind: AgentgatewayBackend
      name: anthropic
    matches:
    - path:
        type: PathPrefix
        value: /v1/messages
      headers:
      - type: Exact
        name: x-direction
        value: request        
  - name: anthropic-1
    backendRefs:
    - group: gateway.kgateway.dev
      kind: AgentgatewayBackend
      name: anthropic
    matches:
    - path:
        type: PathPrefix
        value: /v1/messages
      headers:
      - type: Exact
        name: x-direction
        value: response          
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: openai-prompt-guard
spec:
  targetRefs:
  - group: gateway.kgateway.dev
    kind: AgentgatewayBackend
    name: openai
  backend:
    ai:
      promptGuard:
        request:
        - response:
            message: "request rejected"
            statusCode: 403
          regex:
            action: REJECT
            matches:
            - "credit card"
        response:
        - regex:
            action: REJECT
            builtins:
              - SSN
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: anthropic-request-guardrails
spec:
  targetRefs:
    - group: gateway.kgateway.dev
      kind: AgentgatewayBackend
      name: anthropic
  backend:
    ai:
      promptGuard:
        request:
        - webhook:
            backendRef:
              name: ai-guardrails-webhook
              port: 8000
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: anthropic-response-guardrails
spec:
  targetRefs:
    - group: gateway.kgateway.dev
      kind: AgentgatewayBackend
      name: anthropic
  backend:
    ai:
      promptGuard:
        response:
        - webhook:
            backendRef:
              name: ai-guardrails-webhook
              port: 8000
